# CSI_5640_Project_1

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  change_iters.json  change_width_height.json  makefile  setup.sh
src/: main.cpp
src/systems/: benchmark.cpp  benchmark.h  csv.h  json.cpp  json.h  json_helper.cpp  json_helper.h  render_state.cpp  render_state.h  run_benchmarks.cpp  run_benchmarks.h  types.cpp  types.h  update_state.cpp  update_state.h
visualization/: main.py
